--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -23,12 +23,31 @@
 In this work, we propose a new programming model for distributed data that makes consistency properties explicit and uses a type system to enforce consistency safety. With the Inconsistent, Performance-bound, Approximate (IPA) storage system, programmers specify performance targets and correctness requirements as constraints on persistent data structures and handle uncertainty about the result of datastore reads using new consistency types. We implement a prototype of this model in Scala on top of an existing datastore, Cassandra, and use it to make performance/correctness tradeoffs in two applications: a ticket sales service and a Twitter clone. Our evaluation shows that IPA prevents consistency-based programming errors and adapts consistency automatically in response to changing network conditions, performing comparably to weak consistency and 2-10x faster than strong consistency. }
 }
 
+
 @InProceedings{zhang-diamond,
   author = 	 {Irene Zhang and Niel Lebeck and Pedro Fonseca and Brandon Holt and Raymond Cheng and Ariadna Norberg and Arvind Krishnamurthy and Henry M. Levy},
   title = 	 {Automating Data Management for Wide-area, Reactive Applications},
   booktitle = osdi,
   year = 	 2016,
-  month = 	 11}
+  month = 	 11,
+  abstract = { Users of today's popular wide-area apps (e.g., Twitter,
+                  Google Docs, and Words with Friends) must no longer
+                  save and reload when updating shared data; instead,
+                  these applications are reactive, providing the
+                  illusion of continuous synchronization across mobile
+                  devices and the cloud. Achieving this illusion poses
+                  a complex distributed data management problem for
+                  programmers.  This paper presents the first reactive
+                  data management service, called Diamond, which
+                  provides persistent cloud storage, reliable
+                  synchronization between storage and mobile devices,
+                  and automated execution of application code in
+                  response to shared data updates. We demonstrate that
+                  Diamond greatly simplifies the design of reactive
+                  applications, strengthens distributed data sharing
+                  guarantees, and supports automated reactivity with
+                  low performance overhead.  },
+  url={papers/diamond-osdi16.pdf}}
 
 
 @Article{zhang16-when,
