updating CV with some external review acks

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -400,24 +400,6 @@
 \end{rtable}
 
 \begin{rtable}
-  \begin{rsection}{Patents}
-    US Patent App. 12/559,484.
-    \textit{Saving and Restoring State Information for Virtualized
-      Computer Systems.} 
-    \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
-
-    US Patent App. 13/710,185. 
-    \textit{Method for Saving Virtual Machine State from a Checkpoint
-    File.}  A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
-    J. Pool.\\\vspace{-0.5em}
-
-    US Patent App. 13/710,215. \textit{Method for Restoring Virtual Machine State from a Checkpoint
-    File.} A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
-    J. Pool.\\\vspace{-0.5em}
-    
-    US Patent App. 13/935,382. \textit{Identification of Page Sharing Opportunities within Large Pages.} Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\\vspace{-0.5em}
-  \end{rsection}
-
   \begin{rsection}{Press}
     \textit{Bringing women back to computer science: UW in national
       spotlight over efforts.} Crosscuts. March 28, 2016.\\\vspace{-0.5em}
@@ -429,30 +411,31 @@
     MIT News. October 14, 2010.
   \end{rsection}
 
+  \vspace{1.0em}
   \begin{rsection}{Service}
-    \begin{rentry}{Workshop on Hot Topics in Cloud Computing (HotCloud)}{}
-      \rline{Program Committee}{2016}
+    \begin{rentry}{ASPLOS, External Reviewer}{2017}
        \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{UW Workshop on Hot Topics in Potentially Computer
-        Science (HotPoCSci)}{}
-      \rline{Workshop Founder}{2015}
+    \begin{rentry}{OSDI, External Reviewer}{2016}
        \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{UW Conference on Potentially
-        Computer Science (PoCSci)}{}
-      \rline{Program Co-chair}{2016}
-      \rline{Program Co-chair}{2015}
+    \begin{rentry}{HotCloud, Program Committee}{2016}
        \vspace{-0.5em}
     \end{rentry}
-
+    \begin{rentry}{UW HotPoCSci, Founder}{2015}
+       \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{UW PoCSci, PC Chair}{2015-2016}
+       \vspace{-0.5em}
+    \end{rentry}
     \begin{rentry}{UW CSE Annual Women's Research Day}{}
+      \rline{Committee}{2016}
       \rline{Chair}{2016}
       \rline{Founder}{2015}
        \vspace{-0.5em}
     \end{rentry}
-
     \begin{rentry}{UW Graduate Student Committee}{}
+      \rline{Graduate Admissions Committee}{2014-2016}
       \rline{Graduate Women's Event Coordinator}{2014-2015}
       \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
       \vspace{-0.5em}
@@ -471,45 +454,40 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Teaching\\@UW}
-    \begin{rentry}{Distributed Systems (CSE 452)}{}
-      \rline{Teaching Assistant, UW Department of CSE}{Winter
-        2016}   
-      \rline{Teaching Assistant, UW Department of CSE}{Winter
-        2015}   
+  \vspace{1.0em}
+  \begin{rsection}{Teaching}
+    \begin{rentry}{Distributed Systems (UW CSE 452)}{Seattle, WA}
+      \rline{Teaching Assistant}{Winter 2016}   
+      \rline{Teaching Assistant}{Winter 2015}   
       \vspace{-0.5em}   
     \end{rentry}
-    \begin{rentry}{Introduction to Operating Systems (CSE 451)}{}
-      \rline{Tutor, UW Department of CSE}{Spring 2016}
-      \rline{Tutor, UW Department of CSE}{Fall 2014}
-      \rline{Tutor, UW Department of CSE}{Spring 2014}
-      \rline{Guest Lecturer, UW Department of CSE}{Fall 2013}
-      \rline{Tutor, UW Department of CSE}{Spring 2013}
+    \begin{rentry}{Introduction to Operating Systems (UW CSE
+        451)}{Seattle, WA}
+      \rline{Tutor}{Spring 2016}
+      \rline{Tutor}{Fall 2014}
+      \rline{Tutor}{Spring 2014}
+      \rline{Guest Lecturer}{Fall 2013}
+      \rline{Tutor}{Spring 2013}
       \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{The Hardware/Software Interface (CSE 351)}{}
+    \begin{rentry}{The Hardware/Software Interface (UW CSE
+        351)}{Seattle, WA}
       \rline{Tutor, UW Department of CSE}{Winter 2014}
       \rline{Tutor, UW Department of CSE}{Winter 2013}
       \vspace{-0.5em}
     \end{rentry}
-  \end{rsection}
-\end{rtable}
-
-\begin{rtable}
-  \vspace{1.0em}
-  \begin{rsection}{Teaching\\@MIT}
-    \begin{rentry}{Operating Systems Engineering (6.828)}{}
-      \rline{Teaching Assistant, MIT Department of EECS}{Fall
-        2008} 
+    \begin{rentry}{Operating Systems Engineering (MIT
+        6.828)}{Cambridge, MA}
+      \rline{Teaching Assistant}{Fall 2008}
       % Developed and graded labs assignments where students build an
       % exokernel-style OS. Held weekly office hours to help students
       % with labs and OS fundamentals like virtual memory management,
       % interrupt handlers and process management.
       \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{Intro. to Digital Systems Lab (6.111)}{}
-      \rline{Teaching Assistant, MIT Department of EECS}{Spring
-        2008} 
+    \begin{rentry}{Intro. to Digital Systems Lab (MIT
+        6.111)}{Cambridge, MA}
+      \rline{Teaching Assistant}{Spring 2008}
       % Taught weekly recitations and helped students with labs using
       % FPGAs and Verilog. Helped students design and implement complex
       % final projects such as 3D object tracking. Received student
@@ -517,22 +495,45 @@
       % years.
       \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{Computation Structures (6.004)}{}
-      \rline{Lab Assistant, MIT Department of EECS}{Spring 2007}
+    \begin{rentry}{Computation Structures (MIT 6.004)}{Cambridge, MA}
+      \rline{Lab Assistant}{Spring 2007}
 % Held office
 %       hours to help students design and build a processor and small OS
 %       kernel in simulation.
       \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{Intro. to Computer Science and
-        Programming (6.00)}{}
-      \rline{Lab Assistant, MIT Department of EECS}{Fall 2006}
+        Programming (MIT 6.00)}{Cambridge, MA}
+      \rline{Lab Assistant}{Fall 2006}
  % Taught students
  %      basic computer science concepts such as recursion, abstraction
  %      and OOP.
       \vspace{-0.5em}
     \end{rentry}
   \end{rsection}
+
+
+\end{rtable}
+
+\begin{rtable}
+  \begin{rsection}{Patents}
+    US Patent App. 12/559,484.
+    \textit{Saving and Restoring State Information for Virtualized
+      Computer Systems.} 
+    \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
+
+    US Patent App. 13/710,185. 
+    \textit{Method for Saving Virtual Machine State from a Checkpoint
+    File.}  A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.\\\vspace{-0.5em}
+
+    US Patent App. 13/710,215. \textit{Method for Restoring Virtual Machine State from a Checkpoint
+    File.} A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.\\\vspace{-0.5em}
+    
+    US Patent App. 13/935,382. \textit{Identification of Page Sharing Opportunities within Large Pages.} Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\
+  \end{rsection}
+  \vspace{1.0em}
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
       \rline{MTS, Virtual Machine Monitor
