--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -123,7 +123,7 @@
   \end{rsection}
 
   \begin{rsection}{Interests}
-    Operating systems, distributed systems, virtualization and networking
+    Operating systems, distributed systems, virtualization, and networking
   \end{rsection}
   
   \begin{rsection}{Recent\\Research}
@@ -137,7 +137,7 @@
       with persistent cloud storage, reliable synchronization between
       storage and mobile devices, and automated execution of
       application code in response to shared data updates.
-    \end{rentry}\vspace{.5em}
+    \end{rentry}\vspace{1em}
 
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{SOSP '15}
@@ -149,7 +149,7 @@
       require a Paxos leader or coordination between replicas in a
       shard. Thus, TAPIR can commit a transaction \emph{in a single
         round-trip} and eliminate the bottleneck at the Paxos leader.
-    \end{rentry}\vspace{.5em}
+    \end{rentry}\vspace{1em}
 
     \begin{rentry}{Deployment for Mobile/Cloud Applications}{OSDI '14}
       \vspace{-.5em}\\
@@ -160,7 +160,7 @@
       systems tasks, such as code-offloading and caching. Rather than
       writing distributed systems code, programmers compose a custom
       deployment to meet their application's needs.
-    \end{rentry}\vspace{.5em}
+    \end{rentry}\vspace{1em}
 
     % \begin{rentry}{User-controlled Privacy for Mobile/Cloud
     %     Applications}{OSDI '14}
@@ -245,7 +245,7 @@
    Jinyang Li, M. Frans Kaashoek, Robert Morris. \textit{Flexible,
      Wide-Area Storage for Distributed Systems with WheelFS.}  In
    Proceedings of the USENIX Symposium on Networked Systems Design and
-   Implementation (NSDI).  Boston, MA. April 2009. \\\vspace{-0.5em}
+   Implementation (NSDI).  Boston, MA. April 2009. \\
   \end{rsection}
 
   \begin{rsection}{Journal\\Publications}
@@ -258,7 +258,7 @@
    Woos, Arvind Krishnamurthy, Thomas Anderson, Timothy Roscoe.
    \textit{Arrakis: The Operating System is the Control Plane.}  ACM
    Transactions on Computer Systems (TOCS). November
-   2015.\\\vspace{-0.5em}
+   2015.\\
   \end{rsection}
 
   % \begin{rsection}{In Submission}    
@@ -306,9 +306,9 @@
   \end{rsection}
 
   \begin{rsection}{Awards}
-    % \begin{rentry}{Rising Stars Workshop}{2016}
-    %   \vspace{-0.5em}
-    % \end{rentry} 
+    \begin{rentry}{Rising Stars Workshop}{2016}
+      \vspace{-0.5em}
+    \end{rentry} 
     \begin{rentry}{NCWIT Collegiate Award Runner-up}{2016}
       \vspace{-0.5em}
     \end{rentry} 
@@ -356,11 +356,17 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Talks}
-    \begin{rentry}{Distributed Operating Systems for Modern Applications}{}
-      \rline{CSE Symposium}{Jan 2015}
+  \begin{rsection}{Invited\\Talks}
+    \begin{rentry}{Automating Data Management for Wide-area, Reactive
+        Applications}{}
+      \rline{Symposium on Operating Systems Design and Implementation (OSDI)}{Nov 2016}
+      \rline{UW CSE Industrial Affiliates Meeting}{Oct 2016}
       \vspace{-0.5em}
     \end{rentry}
+    % \begin{rentry}{Distributed Operating Systems for Modern Applications}{}
+    %   \rline{CSE Symposium}{Jan 2015}
+    %   \vspace{-0.5em}
+    % \end{rentry}
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
       \rline{UW Cloud Day}{Jun 2016}
@@ -408,10 +414,8 @@
       science prize.} GeekWire. October 23, 2014.\\\vspace{-0.5em}
 
     \textit{Faster websites, more reliable data.}
-    MIT News. October 14, 2010.
+    MIT News. October 14, 2010.\\
   \end{rsection}
-
-  \vspace{1.0em}
   \begin{rsection}{Service}
     \begin{rentry}{ASPLOS, External Reviewer}{2017}
        \vspace{-0.5em}
@@ -453,8 +457,6 @@
       \vspace{-0.5em}
     \end{rentry}
   \end{rsection}
-
-  \vspace{1.0em}
   \begin{rsection}{Teaching}
     \begin{rentry}{Distributed Systems (UW CSE 452)}{Seattle, WA}
       \rline{Teaching Assistant}{Winter 2016}   
