--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -191,74 +191,72 @@
 
 \begin{rtable}
  \begin{rsection}{Conference\\Publications}
-   \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
-   Raymond Cheng, Ariadna Norberg, Arvind Krishnamurthy, Henry
-   M. Levy. \textit{Automating Data Management for Wide-area, Reactive
-     Applications.}  In Proceedings of the USENIX Symposium on
-   Operating Systems Design and Implementation (OSDI). Savannah,
-   GA. November 2016.\\\vspace{-0.5em}
+   \textbf{I. Zhang}, N. Lebeck, P. Fonseca, B. Holt, R. Cheng,
+   A. Norberg, A. Krishnamurthy, H.  M. Levy. \textit{Automating Data
+     Management for Wide-area, Reactive Applications.}  In Proceedings
+   of the USENIX Symposium on Operating Systems Design and
+   Implementation (OSDI). Savannah, GA. November
+   2016.\\\vspace{-0.5em}
 
-   Brandon Holt, James Bornholt, \textbf{Irene Zhang}, Dan
-   R. K. Ports, Mark Oskin, Luis Ceze. \textit{Disciplined
-     Inconsistency.}  In Proceedings of the ACM Symposium on Cloud
-   Computing (SoCC). Santa Clara, CA. October 2016.\\\vspace{-0.5em}
+   B. Holt, J. Bornholt, \textbf{I. Zhang}, D. R. K. Ports, M.  Oskin,
+   L. Ceze. \textit{Disciplined Inconsistency.}  In Proceedings of the
+   ACM Symposium on Cloud Computing (SoCC). Santa Clara, CA. October
+   2016.\\\vspace{-0.5em}
 
-   \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-   R. K. Ports, Arvind Krishnamurthy. \textit{Building Consistent
-     Transactions with Inconsistent Replication.}.  In Proceedings of
-   the ACM Symposium on Operating Systems Principles (SOSP). Monterey,
-   CA. October 2015.\\\vspace{-0.5em}
+   \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
+   A. Krishnamurthy. \textit{Building Consistent Transactions with
+     Inconsistent Replication.}.  In Proceedings of the ACM Symposium
+   on Operating Systems Principles (SOSP). Monterey, CA. October
+   2015.\\\vspace{-0.5em}
 
-   \textbf{Irene Zhang}, Adriana Szekeres, Dana Van Aken, Isaac
-   Ackerman, Steven D. Gribble, Arvind Krishnamurthy, Henry
-   M. Levy. \textit{Customizable and Extensible Deployment for
-     Mobile/Cloud Applications.}  In Proceedings of the USENIX Symposium
-   on Operating Systems Design and
-   Implementation (OSDI). Broomfield, CO. October 2014.\\ \vspace{-0.5em}
-
-   Simon Peter, Jialin Li, \textbf{Irene Zhang}, Dan R. K. Ports, Doug
-   Woos, Arvind Krishnamurthy, Thomas Anderson, Timothy Roscoe.
-   \textit{Arrakis: The Operating System is the Control Plane.}  In
+   \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman,
+   S. D. Gribble, A. Krishnamurthy, H. M. Levy. \textit{Customizable
+     and Extensible Deployment for Mobile/Cloud Applications.}  In
    Proceedings of the USENIX Symposium on Operating Systems Design and
-   Implementation (OSDI).
-   Broomfield, CO. October 2014. \textbf{Best Paper
+   Implementation (OSDI). Broomfield, CO. October 2014.\\
+   \vspace{-0.5em}
+
+   S. Peter, J. Li, \textbf{I. Zhang}, D. R. K. Ports, D.  Woos,
+   A. Krishnamurthy, T. Anderson, T. Roscoe.  \textit{Arrakis: The
+     Operating System is the Control Plane.}  In Proceedings of the
+   USENIX Symposium on Operating Systems Design and Implementation
+   (OSDI).  Broomfield, CO. October 2014. \textbf{Best Paper
      Award}.\\\vspace{-0.5em}
 
-   \textbf{Irene Zhang}, Tyler Denniston, Yury Baskakov, Alex
-   Garthwaite.   \textit{Optimizing VM Checkpointing for Restore
-     Performance in VMware ESXi.}
-   In Proceedings of the USENIX Annual Technical Conference (USENIX ATC).
-   San Jose, CA. June 2013.\\\vspace{-0.5em}
+   \textbf{I. Zhang}, T. Denniston, Y. Baskakov, A. Garthwaite.
+   \textit{Optimizing VM Checkpointing for Restore Performance in
+     VMware ESXi.}  In Proceedings of the USENIX Annual Technical
+   Conference (USENIX ATC).  San Jose, CA. June 2013.\\\vspace{-0.5em}
 
-   \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
-   C. Barr. \textit{Fast Restore of Checkpointed Memory Using Working
-     Set Estimation.}  In Proceedings of the ACM Conference on Virtual
-   Execution Environments (VEE). Newport Beach, CA. March 2011.\\\vspace{-0.5em}
+   \textbf{I. Zhang}, A. Garthwaite, Y. Baskakov,
+   K. C. Barr. \textit{Fast Restore of Checkpointed Memory Using
+     Working Set Estimation.}  In Proceedings of the ACM Conference on
+   Virtual Execution Environments (VEE). Newport Beach, CA. March
+   2011.\\\vspace{-0.5em}
 
-   Dan R. K. Ports, Austin Clements, \textbf{Irene Zhang}, Samuel
-   Madden, Barbara Liskov. \textit{Transactional Consistency and
-     Automatic Management in an Application Data Cache.}  In
-   Proceedings of the USENIX Symposium on Operating Systems Design and
-   Implementation (OSDI). Vancouver, Canada. October 2010.\\\vspace{-0.5em}
+   D. R. K. Ports, A. Clements, \textbf{I. Zhang}, S. Madden,
+   B. Liskov. \textit{Transactional Consistency and Automatic
+     Management in an Application Data Cache.}  In Proceedings of the
+   USENIX Symposium on Operating Systems Design and Implementation
+   (OSDI). Vancouver, Canada. October 2010.\\\vspace{-0.5em}
 
-   Jeremy Stribling, Yair Sovran, \textbf{Irene Zhang}, Xavid Pretzer,
-   Jinyang Li, M. Frans Kaashoek, Robert Morris. \textit{Flexible,
-     Wide-Area Storage for Distributed Systems with WheelFS.}  In
-   Proceedings of the USENIX Symposium on Networked Systems Design and
+   J. Stribling, Y. Sovran, \textbf{I. Zhang}, X. Pretzer, J. Li,
+   M. F. Kaashoek, R. Morris. \textit{Flexible, Wide-Area Storage for
+     Distributed Systems with WheelFS.}  In Proceedings of the USENIX
+   Symposium on Networked Systems Design and
    Implementation (NSDI).  Boston, MA. April 2009. \\
   \end{rsection}
 
   \begin{rsection}{Journal\\Publications}
-    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-   R. K. Ports, Arvind Krishnamurthy. \textit{When Is Operation
-     Ordering Required in Replicated Transactional Storage?}.  IEEE
-   Data Engineering Bulletin. March 2016.\\\vspace{-0.5em}
+    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
+    A. Krishnamurthy. \textit{When Is Operation Ordering Required in
+      Replicated Transactional Storage?}.  IEEE Data Engineering
+    Bulletin. March 2016.\\\vspace{-0.5em}
 
-   Simon Peter, Jialin Li, \textbf{Irene Zhang}, Dan R. K. Ports, Doug
-   Woos, Arvind Krishnamurthy, Thomas Anderson, Timothy Roscoe.
-   \textit{Arrakis: The Operating System is the Control Plane.}  ACM
-   Transactions on Computer Systems (TOCS). November
-   2015.\\
+    S. Peter, J. Li, \textbf{I. Zhang}, D. R. K. Ports, D. Woos,
+    A. Krishnamurthy, T. Anderson, T. Roscoe.  \textit{Arrakis: The
+      Operating System is the Control Plane.}  ACM Transactions on
+    Computer Systems (TOCS). November 2015.\\
   \end{rsection}
 
   % \begin{rsection}{In Submission}    
@@ -273,36 +271,40 @@
   % \end{rsection}
   
   \begin{rsection}{Workshop\\Publications}
-    Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin and Luis
-    Ceze.  \textit{Claret: Using Data Types for Highly Concurrent
-      Distributed Transactions.} In Proceedings of the Workshop on
-    Principles and Practice of Consistency for Distributed Data
-    (PaPoC).  Bordeaux, France. April 2015.\\\vspace{-0.5em}
+    B. Holt, \textbf{I. Zhang}, D. R. K. Ports, M. Oskin and L. Ceze.
+    \textit{Claret: Using Data Types for Highly Concurrent Distributed
+      Transactions.} In Proceedings of the Workshop on Principles and
+    Practice of Consistency for Distributed Data (PaPoC).  Bordeaux,
+    France. April 2015.\\\vspace{-0.5em}
 
 
-    Simon Peter, Jialin Li, Doug Woos, \textbf{Irene Zhang}, Dan
-    R. K. Ports, Thomas Anderson, Arvind Krishnamurthy, Mark
-    Zbikowski. \textit{Towards High-Performance Application-Level
-      Storage Management.} In Proceedings of the
-    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014.\\\vspace{-0.5em}
+    S. Peter, J. Li, D. Woos, \textbf{Irene Zhang}, D. R. K. Ports,
+    T. Anderson, A. Krishnamurthy, M. Zbikowski. \textit{Towards
+      High-Performance Application-Level Storage Management.} In
+    Proceedings of the USENIX Workshop on Hot Topics in Storage and
+    File Systems (HotStorage). Philadelphia, PA. June
+    2014.\\\vspace{-0.5em}
+  \end{rsection}
+
+  \begin{rsection}{Posters \&\\Extended\\Abstracts}
+    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
+    A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase
+      Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing,
+    China. June 2014.\\\vspace{-.5em}
   \end{rsection}
 \end{rtable}
 
 \begin{rtable}
-  \begin{rsection}{Posters \&\\Extended\\Abstracts}
-    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
-      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-.5em}
-
-    \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
-    C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
-      Checkpointed Memory Using Working Set Estimation.} ACM Symposium
-    on Operating Systems Principles (SOSP).  Big Sky, MT. October
+  \begin{rsection}{}
+    \textbf{I. Zhang}, A. Garthwaite, Y. Baskakov, K. C. Barr, J.
+    Pool, K. Christopher. \textit{Fast Restore of Checkpointed Memory
+      Using Working Set Estimation.} ACM Symposium on Operating
+    Systems Principles (SOSP).  Big Sky, MT. October
     2009.\\\vspace{-0.5em}
 
-    \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
+    \textbf{I. Zhang}, K. C. Barr.  \textit{Improving VMware
       Workstation Restore using Working Set Estimation.}  VMworld
-    Conference. Las Vegas, NV. September 2008.\\ \vspace{-0.5em}
+    Conference. Las Vegas, NV. September 2008.\\
   \end{rsection}
 
   \begin{rsection}{Awards}
